# insta360_ros_driver

./: .gitignore  CMakeLists.txt  README.md  camera_access.sh  package.xml  rostopic_hz.sh  setup.py  setup.sh
config/: X2_params.yaml  air_lowres.yaml  air_params.yaml  config.yaml  intrinsics.yaml  preview.rviz
launch/: bag_compress.launch  bag_preview.launch  bag_record.launch  bag_undistort.launch  bringup.launch  live_preview.launch  live_process.launch  preview.launch  preview_bag.launch  process.launch  raw.launch  record_bag.launch
scripts/: compression.py  get_images.py  live_processing.py  postprocess.py  record.py  undistortion.py
src/: main.cpp
src/insta360_ros_driver/: directory_verification.py  tools.py
